js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/lib1/JsModuleB.1.kt
@file:JsModule("js-module-b")

external fun externalDemoFunction(): Int
